--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.4'
 services:
   # This service definition is meant for *build* purposes only!
   irods-base-ubuntu:
@@ -57,6 +57,12 @@ services:
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/icat:${ENV_TAG}
     depends_on:
       - irods-db
+    healthcheck:
+      test: sh /opt/irods/isReady.sh  || exit 1
+      interval: 20s
+      timeout: 5m
+      retries: 20
+      start_period: 5m
     hostname: irods.dh.local
     ports:
       - "1247:1247"
@@ -99,7 +105,8 @@ services:
         - ENV_DOCKERIZE_VERSION
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires:${ENV_TAG}
     depends_on:
-      - irods
+      irods:
+        condition: service_healthy
     hostname: ires.dh.local
     environment:
       RODS_PASSWORD: irods
