Update postgres xenial repo to bionic [DHS-2559]

--- a/irods/icat/Dockerfile
+++ b/irods/icat/Dockerfile
@@ -9,7 +9,7 @@ ARG ENV_IRODS_VERSION
 
 # Make sure to use the same postgres version for client and irods-db server
 RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
-    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
+    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     postgresql-client-${ENV_POSTGRES_CLIENT_VERSION} \
