Install python-irodsclient for iCAT at irods user level
We sometimes develop scripts that use python-irodsclient, for example
from dh-utils.

Ultimately, we think it would be better to have a python venv for
dh-utils for example. For now, this matches our acc/prod better and
makes development easier.

[DHDO-318]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -84,6 +84,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
+      #- ./externals/dh-utils:/opt/dh-utils
       - ./keycloak/users.json:/opt/irods/users.json
       - microservices-build-ubuntu:/tmp/microservices-build
 
