Add JIRA_URL and JIRA_PROJECT_KEY to mdr.env [DHS-2540, DHS-2628]

--- a/mdr.env
+++ b/mdr.env
@@ -34,6 +34,8 @@ BIOPORTAL_URL=https://data.bioontology.org
 LOGSPOUT=ignore
 WEBDAV_DOWNLOAD_URL=download.${RIT_ENV}.dh.unimaas.nl
 WEBDAV_UPLOAD_URL=upload.${RIT_ENV}.dh.unimaas.nl
+JIRA_URL=https://mumc.atlassian.net
+JIRA_PROJECT_KEY=DHDOSB
 
 # SMB
 SMB_UM_WINDOWS_PATH=\\foobar.unimaas.nl\iRODS-ingestzones\dev
