Add elasticsearch container and create irods index on start-up [DHS-2524, DHS-2527]

--- a/.env
+++ b/.env
@@ -26,6 +26,9 @@ ENV_DAVRODS_VERSION=4.2.6_1.4.2
 ENV_RULE_WRAPPER_VERSION=develop
 ENV_MDR_POSTGRES_VERSION=13.4
 
+# Elastic
+ENV_ELASTIC_PASSWORD=foobar
+
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
 ## Note: postgres version is also used by irods (icat) container
