--- a/.env
+++ b/.env
@@ -28,6 +28,8 @@ ENV_MDR_POSTGRES_VERSION=13.4
 
 # Elastic
 ENV_ELASTIC_PASSWORD=foobar
+ENV_ELASTIC_HOST=elasticsearch.dh.local
+ENV_ELASTIC_PORT=9200
 
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
