--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -71,6 +71,8 @@ services:
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
+      ELASTIC_HOST: ${ENV_ELASTIC_HOST}
+      ELASTIC_PORT: ${ENV_ELASTIC_PORT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
@@ -112,6 +114,8 @@ services:
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
+      ELASTIC_HOST: ${ENV_ELASTIC_HOST}
+      ELASTIC_PORT: ${ENV_ELASTIC_PORT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
@@ -157,6 +161,8 @@ services:
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
+      ELASTIC_HOST: ${ENV_ELASTIC_HOST}
+      ELASTIC_PORT: ${ENV_ELASTIC_PORT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
@@ -205,6 +211,8 @@ services:
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
+      ELASTIC_HOST: ${ENV_ELASTIC_HOST}
+      ELASTIC_PORT: ${ENV_ELASTIC_PORT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
@@ -248,6 +256,8 @@ services:
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
+      ELASTIC_HOST: ${ENV_ELASTIC_HOST}
+      ELASTIC_PORT: ${ENV_ELASTIC_PORT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
