Update the index from irods to collection_metadata [DHS-2524, DHS-2527]

--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -1,9 +1,9 @@
 FROM elasticsearch:7.17.6
 
 ADD bootstrap_elastic_dh.sh /tmp/bootstrap_elastic_dh.sh
-ADD create_irods_index.sh /tmp/create_irods_index.sh
+ADD create_collection_metadata_index.sh /tmp/create_collection_metadata_index.sh
 
 RUN chmod +x /tmp/bootstrap_elastic_dh.sh
-RUN chmod +x /tmp/create_irods_index.sh
+RUN chmod +x /tmp/create_collection_metadata_index.sh
 
 CMD ["/tmp/bootstrap_elastic_dh.sh"]
