Update elastic README.md and update the elastic hostname variables [DHS-2524, DHS-2527]

--- a/mdr.env
+++ b/mdr.env
@@ -22,7 +22,7 @@ TERMS_OF_SERVICE_TIMESTAMP=1618476699 #  date '+%s' on   Thu Apr 15 2021 08:51:3
 
 # Elastic
 ELASTIC_PASSWORD=foobar
-ELASTIC_HOST=elasticsearch.dh.local
+ELASTIC_HOST=elastic.dh.local
 ELASTIC_PORT=9200
 
 # Mailer
