Move elasticsearch to separate repo [DHS-2524, DHS-2527]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
           - mdr.dh.local
   elastic:
     build:
-      context: elastic/
+      context: externals/dh-elasticsearch
       dockerfile: Dockerfile
     environment:
       ingest.geoip.downloader.enabled: "false"
