Update rule_wrapper_version [DHS-2668, DHS-2664]

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ ENV_DAVRODS_IRODS_VERSION=4.2.6
 ENV_DAVRODS_VERSION=4.2.6_1.4.2
 
 # MDR
-ENV_RULE_WRAPPER_VERSION=develop
+ENV_RULE_WRAPPER_VERSION=2022.2
 ENV_MDR_POSTGRES_VERSION=13.4
 
 # For containers that use docker images
