Upgrade iCAT & iRES to basic native 4.2.11 [DHS-2429, DHS-2644] + Merge DHS-1726-4211 into 2022.1 + Disable SSL + Disable Python Rule Engine

--- a/.env
+++ b/.env
@@ -8,9 +8,12 @@ ENV_TAG=latest
 ENV_BRANCH=master
 
 # iRODS and iRES
-ENV_IRODS_VERSION=4.2.6
+ENV_IRODS_VERSION=4.2.11-1~bionic
 ENV_IRODS_EXT_CLANG_VERSION=3.8-0
+ENV_IRODS_PYTHON_PLUGIN_VERSION=4.2.11.1-1~bionic
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
+ENV_IRODS_EXT_CLANG_VERSION=6.0-0
+ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=6.0-0
 ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
 ENV_IRODS_INGEST_REMOVE_DELAY=300s
 ENV_IRODS_TEMP_PASSWORD_LIFETIME=7776000
