--- a/irods/irods-base/Dockerfile.ubuntu
+++ b/irods/irods-base/Dockerfile.ubuntu
@@ -6,7 +6,7 @@
 #
 # This image only includes files that any iRODS instance (iCAT or iRES) will
 # probably need. Also, included are utilities that might come in handy during
-# development or debugging. Stuff you wound't need in production!
+# development or debugging. Stuff you wouldn't need in production!
 #
 # Rules is: include here only things that all iRODS instances would need. If
 # something is only needed for an iCAT, or a specific iRES, we don't include it
@@ -16,6 +16,7 @@ FROM ubuntu:18.04
 
 # Load build arguments from environment
 ARG ENV_IRODS_VERSION
+ARG ENV_IRODS_PYTHON_PLUGIN_VERSION
 ARG ENV_IRODS_EXT_CLANG_VERSION
 ARG ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
 ARG ENV_FILEBEAT_VERSION
@@ -29,6 +30,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     fortune-mod \
     g++ \
     libcurl4-openssl-dev \
+    libjansson-dev \
     libfuse2 \
     libjson-perl \
     librabbitmq-dev \
@@ -54,8 +56,9 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
 
 # Install iRODS packages (APT)
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
+ENV IRODS_PYTHON_PLUGIN_VERSION ${ENV_IRODS_PYTHON_PLUGIN_VERSION}
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
-    && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
+    && echo "deb [arch=amd64] https://packages.irods.org/apt/ bionic main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     irods-server=${IRODS_VERSION} \
@@ -65,8 +68,10 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key a
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION} \
+    irods-externals-jansson2.7-0 \
+    irods-externals-json3.7.3-0 \
     # packages required for python rule engine
-    irods-rule-engine-plugin-python=${IRODS_VERSION}
+    irods-rule-engine-plugin-python=${IRODS_PYTHON_PLUGIN_VERSION}
 
 # Temporary fix needed with iRODS 4.2.6, after upgrading this shouldnt be necessary anymore
 # https://github.com/agracio/electron-edge-js/issues/16
