--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ENV_IRODS_PYTHON_PLUGIN_VERSION=4.2.11.1-1~bionic
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
 ENV_IRODS_EXT_CLANG_VERSION=6.0-0
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=6.0-0
-ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
+ENV_IRODS_RESC_PLUGIN_S3_VERSION=4.2.11.2-1~bionic
 ENV_IRODS_INGEST_REMOVE_DELAY=300s
 ENV_IRODS_TEMP_PASSWORD_LIFETIME=7776000
 
