--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -12,6 +12,7 @@ services:
         - ENV_IRODS_EXT_CLANG_VERSION
         - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
         - ENV_FILEBEAT_VERSION
+        - ENV_IRODS_RESC_PLUGIN_S3_VERSION
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/irods-base:ubuntu
 
   # Ditto, but Centos flavor
@@ -74,6 +75,8 @@ services:
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
+      ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
+      ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
     networks:
       default:
         aliases:
@@ -114,6 +117,8 @@ services:
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
+      ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
+      ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
     networks:
       default:
         aliases:
