Add the creation of the log folder irods-pre-ingest to Dockerfile [DHS-2678, DHS-2695]

--- a/irods/ires-centos/Dockerfile
+++ b/irods/ires-centos/Dockerfile
@@ -25,6 +25,10 @@ ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
 # Add bootstrap scripts
 ADD ./scripts/* /opt/irods/
 
+# Create iRODS pre-ingest logs folder & give ownership to the irods user account
+RUN mkdir -p /var/log/irods-pre-ingest
+RUN chmod 777 /var/log/irods-pre-ingest
+
 EXPOSE 1248 1247 8000
 # Note: centos image uses 'bash' for /bin/sh. Ubuntu uses 'dash'.
 # When the CMD instruction is in shell form (without [" ",...]), docker will do
