Prepare .env for dh-irods [DHDO-704]

--- a/.env
+++ b/.env
@@ -7,14 +7,6 @@ ENV_REGISTRY_HOST=registry.dh.unimaas.nl
 ENV_TAG=latest
 ENV_BRANCH=master
 
-# iRODS and iRES
-ENV_IRODS_VERSION=4.2.6
-ENV_IRODS_EXT_CLANG_VERSION=3.8-0
-ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
-ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
-ENV_IRODS_INGEST_REMOVE_DELAY=300s
-ENV_IRODS_TEMP_PASSWORD_LIFETIME=7776000
-
 # iRODS-frontend
 ENV_IRODS_REST_VERSION=4.1.10.0-RC1
 
@@ -38,13 +30,48 @@ ENV_FILEBEAT_VERSION=7.13.2
 ENV_HTTP_PROXY=http://proxy.unimaas.nl:3128/
 ENV_HTTPS_PROXY=http://proxy.unimaas.nl:3128/
 
+# iRODS
+ENV_IRODS_UID=999
+ENV_IRODS_GID=999
+ENV_IRODS_VERSION=4.2.6
+ENV_IRODS_EXT_CLANG_VERSION=3.8-0
+ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
+ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
+ENV_IRODS_INGEST_REMOVE_DELAY=300s
+ENV_IRODS_TEMP_PASSWORD_LIFETIME=7776000
+# These secrets could be templated by ansible. *But*, they would only shared to
+# the container that needs them, especially in production. So, if this .env is
+# not the right place given that restriction, we could move them to
+# docker-compose.yml? Also, some of them are icat only, others irescs only.
+# Perhaps only have the strictly common ones here, rest in docker-compose?
+ENV_IRODS_PASSWORD_ADMIN=irods
+#ENV_IRODS_ICAT_HOST=
+#ENV_IRODS_KEY_SERVER_ZONE=
+#ENV_IRODS_KEY_SERVER_NEGOTIATION=
+#ENV_IRODS_KEY_CONTROL_PLANE=
+#ENV_IRODS_PASSWORDS_SALT=
+
+# PGSQL
+ENV_POSTGRES_VERSION=11.16
+ENV_POSTGRES_CLIENT_VERSION=11
+
+# Other (used in various containers)
+ENV_DOCKERIZE_VERSION=v0.2.0
+ENV_FILEBEAT_VERSION=7.13.2
+
 # S3 related
 ENV_S3_ACCESS_KEY1=ABCDEFGHIJKLMNOPQRST
 ENV_S3_SECRET_KEY1=ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNO
 ENV_S3_ACCESS_KEY2=BCDEFGHIJKLMNOPQRSTU
 ENV_S3_SECRET_KEY2=BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
+ENV_S3_AUTH_FILE=/var/lib/irods/minio.keypair
 
 # EPICPID for iRODS-ruleset
 ENV_EPICPID_URL=http://epicpid.dh.local/epic/21.T12996/
 ENV_EPICPID_USER=user
 ENV_EPICPID_PASSWORD=foobar
+
+# MDR
+ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl
+
+ENV_DEBUG_DH_BOOTSTRAP="no"
