--- a/mdr.env
+++ b/mdr.env
@@ -16,7 +16,7 @@ SAML_DJANGO_LASTNAME_ATTR=sn
 SAML_DJANGO_MAIL_ATTR=mail
 
 # iRODS
-IRODS_HOST=irods.dh.local
+IRODS_HOST=icat.dh.local
 IRODS_USER=rods
 IRODS_PASS=irods
 IRODS_CLIENT_SERVER_POLICY=CS_NEG_REQUIRE
