--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -231,7 +231,7 @@ services:
       ENV_S3_HOST: "minio1.dh.local:9000"
       ENV_FILEBEAT_PRIMARY_TAG: IRES
       ENV_FILEBEAT_SECONDARY_TAG: IRES_UM04
-      VIRTUAL_HOST: ires-s3-1.${RIT_ENV}.rit.unimaas.nl
+      VIRTUAL_HOST: ires-ceph-ac.${RIT_ENV}.rit.unimaas.nl
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
@@ -295,7 +295,7 @@ services:
       ENV_S3_HOST: "minio2.dh.local:9000"
       ENV_FILEBEAT_PRIMARY_TAG: IRES
       ENV_FILEBEAT_SECONDARY_TAG: IRES_UM01
-      VIRTUAL_HOST: ires-s3-2.${RIT_ENV}.rit.unimaas.nl
+      VIRTUAL_HOST: ires-ceph-gl.${RIT_ENV}.rit.unimaas.nl
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
