Add environment variable ENVIRONMENT for iRODS services

--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
 ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
 ENV_IRODS_INGEST_REMOVE_DELAY=300s
 ENV_IRODS_TEMP_PASSWORD_LIFETIME=7776000
+ENV_ENVIRONMENT=${RIT_ENV}
 
 # iRODS-frontend
 ENV_IRODS_REST_VERSION=4.1.10.0-RC1
