--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -73,6 +73,7 @@ services:
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
       ELASTIC_HOST: ${ENV_ELASTIC_HOST}
       ELASTIC_PORT: ${ENV_ELASTIC_PORT}
+      ENVIRONMENT: ${ENV_ENVIRONMENT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
@@ -116,6 +117,7 @@ services:
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
       ELASTIC_HOST: ${ENV_ELASTIC_HOST}
       ELASTIC_PORT: ${ENV_ELASTIC_PORT}
+      ENVIRONMENT: ${ENV_ENVIRONMENT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
@@ -163,6 +165,7 @@ services:
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
       ELASTIC_HOST: ${ENV_ELASTIC_HOST}
       ELASTIC_PORT: ${ENV_ELASTIC_PORT}
+      ENVIRONMENT: ${ENV_ENVIRONMENT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
@@ -213,6 +216,7 @@ services:
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
       ELASTIC_HOST: ${ENV_ELASTIC_HOST}
       ELASTIC_PORT: ${ENV_ELASTIC_PORT}
+      ENVIRONMENT: ${ENV_ENVIRONMENT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
@@ -258,6 +262,7 @@ services:
       ELASTIC_PASSWORD: ${ENV_ELASTIC_PASSWORD}
       ELASTIC_HOST: ${ENV_ELASTIC_HOST}
       ELASTIC_PORT: ${ENV_ELASTIC_PORT}
+      ENVIRONMENT: ${ENV_ENVIRONMENT}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       DEBUG_DH_BOOTSTRAP:  "no"
