Added profiles [DHS-2810]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   irods-db:
     image: postgres:${ENV_POSTGRES_VERSION}
@@ -15,6 +15,7 @@ services:
       LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
+    profiles: ["minimal","backend","full"]
     networks:
       default:
         aliases:
@@ -58,6 +59,7 @@ services:
       ENV_FILEBEAT_PRIMARY_TAG: ICAT
       # TODO: Do we want to change this to icat?
       VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
+    profiles: ["minimal","backend","full"]
     networks:
       default:
         aliases:
@@ -114,6 +116,7 @@ services:
       # Pricing AVU for 'coordinating' resource
       ENV_IRODS_COOR_RESC_PRICING: "0.130"
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
+    profiles: ["minimal","backend","full"]
     networks:
       default:
         aliases:
@@ -177,6 +180,7 @@ services:
       ENV_IRODS_COOR_RESC_PRICING: "0"
       # TODO: same as before.. not centos anymore
       VIRTUAL_HOST: ires-hnas-azm.${RIT_ENV}.rit.unimaas.nl
+    profiles: ["backend","full"]
     networks:
       default:
         aliases:
@@ -239,6 +243,7 @@ services:
       - ./externals/dh-irods/ires-s3/test-dev-ssl-certs/:/opt/certificates:ro
       - ./externals/dh-irods/ires-s3/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       - ./externals/dh-irods/ires-s3/scripts/bootstrap_irods.sh:/opt/irods/bootstrap_irods.sh
+    profiles: ["backend","full"]
     networks:
       default:
         aliases:
@@ -302,6 +307,7 @@ services:
       - ./externals/dh-irods/ires-s3/test-dev-ssl-certs/:/opt/certificates:ro
       - ./externals/dh-irods/ires-s3/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       - ./externals/dh-irods/ires-s3/scripts/bootstrap_irods.sh:/opt/irods/bootstrap_irods.sh
+    profiles: ["backend","full"]
     networks:
       default:
         aliases:
@@ -317,6 +323,7 @@ services:
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
+    profiles: ["backend","full"]
     networks:
       default:
         aliases:
@@ -332,6 +339,7 @@ services:
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
+    profiles: ["backend","full"]
     networks:
       default:
         aliases:
