Rename docker-dev project to dev [DHS-2810]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -297,7 +297,7 @@ services:
       LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
-    profiles: ["minimal","full"]
+    profiles: ["full"]
     networks:
       default:
         aliases:
